--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Devoir à la maison</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
